--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                 </div>
 
                 <div class="rounded-full bg-green-100 px-8 py-3 text-xl font-bold flex items-center gap-2">
-                    <span id="heart-count">0</span>
-                    <img class="w-7" src="./assets/heart.png" alt="">
+                    <span id="heart-count">100</span>
+                    <img class="w-7" src="./assets/coin.png" alt="">
                 </div>
 
                 <div class="rounded-full bg-green-600 px-8 py-3 text-xl text-white">
@@ -302,10 +302,11 @@
             <div id="history-container">
 
                 <!-- dynamically content update here -->
-                 
+
             </div>
         </div>
     </main>
+    <script src="./script/script.js"></script>
 </body>
 
 </html>
