--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </div>
 
                 <div class="rounded-full bg-green-100 px-8 py-3 text-xl font-bold flex items-center gap-2">
-                    <span id="heart-count">100</span>
+                    <span id="coin-count">100</span>
                     <img class="w-7" src="./assets/coin.png" alt="">
                 </div>
 
