just fix responsive nav issues

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     Service
                 </h1>
             </div>
-            <div class="flex gap-6">
+            <div class="live-nav flex flex-wrap justify-around items-center gap-5">
                 <div class="rounded-full bg-green-100 px-8 py-3 text-xl font-bold flex items-center gap-2">
                     <span id="heart-count">0</span>
                     <img class="w-7" src="./assets/heart.png" alt="">
